add letter buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,34 @@
     <div class="btn-container">
       <button>Click here to start a new game!</button>
     </div>
-    <div class="letter-container"></div>
+    <div class="letter-container">
+      <div class="letter" id="a">A</div>
+      <div class="letter" id="b">B</div>
+      <div class="letter" id="c">C</div>
+      <div class="letter" id="d">D</div>
+      <div class="letter" id="e">E</div>
+      <div class="letter" id="f">F</div>
+      <div class="letter" id="g">G</div>
+      <div class="letter" id="h">H</div>
+      <div class="letter" id="i">I</div>
+      <div class="letter" id="j">J</div>
+      <div class="letter" id="k">K</div>
+      <div class="letter" id="l">L</div>
+      <div class="letter" id="m">M</div>
+      <div class="letter" id="n">N</div>
+      <div class="letter" id="o">O</div>
+      <div class="letter" id="p">P</div>
+      <div class="letter" id="q">Q</div>
+      <div class="letter" id="r">R</div>
+      <div class="letter" id="s">S</div>
+      <div class="letter" id="t">T</div>
+      <div class="letter" id="u">U</div>
+      <div class="letter" id="v">V</div>
+      <div class="letter" id="w">W</div>
+      <div class="letter" id="x">X</div>
+      <div class="letter" id="y">Y</div>
+      <div class="letter" id="z">Z</div>
+    </div>
     <script src="code.js"></script>
   </body>
 </html>
