--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="btn-container">
       <button>Click here to start a new game!</button>
     </div>
+    <div class="image-container"></div>
     <div id="line-container"></div>
     <div class="letter-container">
       <div class="letter" id="a">A</div>
