--- a/game.html
+++ b/game.html
@@ -17,33 +17,34 @@
     <div class="btn-container"></div>
     <div id="line-container"></div>
     <div class="letter-container">
-      <div class="letter" id="a">A</div>
-      <div class="letter" id="b">B</div>
-      <div class="letter" id="c">C</div>
-      <div class="letter" id="d">D</div>
-      <div class="letter" id="e">E</div>
-      <div class="letter" id="f">F</div>
-      <div class="letter" id="g">G</div>
-      <div class="letter" id="h">H</div>
-      <div class="letter" id="i">I</div>
-      <div class="letter" id="j">J</div>
-      <div class="letter" id="k">K</div>
-      <div class="letter" id="l">L</div>
-      <div class="letter" id="m">M</div>
-      <div class="letter" id="n">N</div>
-      <div class="letter" id="o">O</div>
-      <div class="letter" id="p">P</div>
-      <div class="letter" id="q">Q</div>
-      <div class="letter" id="r">R</div>
-      <div class="letter" id="s">S</div>
-      <div class="letter" id="t">T</div>
-      <div class="letter" id="u">U</div>
-      <div class="letter" id="v">V</div>
-      <div class="letter" id="w">W</div>
-      <div class="letter" id="x">X</div>
-      <div class="letter" id="y">Y</div>
-      <div class="letter" id="z">Z</div>
+      <button class="letter" id="a">A</button>
+      <button class="letter" id="b">B</button>
+      <button class="letter" id="c">C</button>
+      <button class="letter" id="d">D</button>
+      <button class="letter" id="e">E</button>
+      <button class="letter" id="f">F</button>
+      <button class="letter" id="g">G</button>
+      <button class="letter" id="h">H</button>
+      <button class="letter" id="i">I</button>
+      <button class="letter" id="j">J</button>
+      <button class="letter" id="k">K</button>
+      <button class="letter" id="l">L</button>
+      <button class="letter" id="m">M</button>
+      <button class="letter" id="n">N</button>
+      <button class="letter" id="o">O</button>
+      <button class="letter" id="p">P</button>
+      <button class="letter" id="q">Q</button>
+      <button class="letter" id="r">R</button>
+      <button class="letter" id="s">S</button>
+      <button class="letter" id="t">T</button>
+      <button class="letter" id="u">U</button>
+      <button class="letter" id="v">V</button>
+      <button class="letter" id="w">W</button>
+      <button class="letter" id="x">X</button>
+      <button class="letter" id="y">Y</button>
+      <button class="letter" id="z">Z</button>
     </div>
+    <button id="reset-button">Reset</button>
     <script src="gameCode.js"></script>
   </body>
 </html>
