add text and logic  if winning the game

--- a/game.html
+++ b/game.html
@@ -12,10 +12,11 @@
   </head>
   <body>
     <div class="info-box"></div>
-
+    <div class="win-box"></div>
     <img id="image" src="images/h0.png" />
     <div class="btn-container"></div>
     <div id="line-container"></div>
+    <div class="generated-word"></div>
     <div class="letter-container">
       <button class="letter" id="a">A</button>
       <button class="letter" id="b">B</button>
