add new images and responsivesness on index

--- a/game.html
+++ b/game.html
@@ -11,9 +11,11 @@
     />
   </head>
   <body>
-    <div class="info-box"></div>
-    <div class="win-box"></div>
-    <img id="image" src="images/h0.png" />
+    <section class="input-text">
+      <div class="info-box"></div>
+      <div class="win-box"></div>
+    </section>
+    <img id="image" src="images/n1.jpg" />
     <div class="btn-container"></div>
     <div id="line-container"></div>
     <div class="generated-word"></div>
@@ -45,7 +47,6 @@
       <button class="letter" id="y">Y</button>
       <button class="letter" id="z">Z</button>
     </div>
-    <button id="reset-button">Reset</button>
     <script src="gameCode.js"></script>
   </body>
 </html>
